[gd_scene load_steps=23 format=4 uid="uid://b0dxf5xj7ksb7"]

[ext_resource type="PackedScene" uid="uid://cwmq66p2fgfkg" path="res://player.tscn" id="1_20vq2"]
[ext_resource type="Script" path="res://main.gd" id="1_u8reb"]
[ext_resource type="PackedScene" uid="uid://cysktlirfd1sa" path="res://mob.tscn" id="2_p1emh"]
[ext_resource type="PackedScene" uid="uid://mql5ig0peqw1" path="res://battery.tscn" id="3_eq8ru"]
[ext_resource type="PackedScene" uid="uid://wkvaoylsgo3v" path="res://hud.tscn" id="4_v6k7g"]
[ext_resource type="Texture2D" uid="uid://cg3hvlicrnqnb" path="res://assets/tiles/tilemap-use.png" id="5_4cmto"]
[ext_resource type="PackedScene" uid="uid://clao0g7w6s71g" path="res://sign.tscn" id="5_4flbu"]
[ext_resource type="PackedScene" uid="uid://tx5fc4vercbp" path="res://wave_puzzle_spawner.tscn" id="5_vpf7m"]
[ext_resource type="Script" path="res://charge.gd" id="7_fv7ns"]
[ext_resource type="Script" path="res://charged.gd" id="8_qbj57"]
[ext_resource type="AudioStream" uid="uid://bjxad4yc5aoc2" path="res://assets/audio/teto_hit.wav" id="10_uvtts"]
[ext_resource type="AudioStream" uid="uid://bm3gr2ws56ulo" path="res://assets/audio/fuel_invalid.wav" id="11_6ipa8"]
[ext_resource type="AudioStream" uid="uid://dups2irjrd1v7" path="res://assets/audio/fuel_valid.wav" id="12_mugss"]

[sub_resource type="Curve2D" id="Curve2D_wdt4c"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 240, 0, 0, 0, 0, 0, 1040, 8, 0, 0, 0, 0, 1032, 952, 0, 0, 0, 0, 240, 960, 0, 0, 0, 0, 240, 0)
}
point_count = 5

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qvpmy"]
texture = ExtResource("5_4cmto")
texture_region_size = Vector2i(80, 80)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
7:2/0 = 0
8:2/0 = 0

[sub_resource type="TileSet" id="TileSet_85w72"]
tile_size = Vector2i(80, 80)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_qvpmy")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_khe54"]
texture = ExtResource("5_4cmto")
texture_region_size = Vector2i(80, 80)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)

[sub_resource type="TileSet" id="TileSet_rmodm"]
tile_size = Vector2i(80, 80)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 4
sources/0 = SubResource("TileSetAtlasSource_khe54")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ndhd3"]
texture = ExtResource("5_4cmto")
texture_region_size = Vector2i(80, 80)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, -40, 40, 40, 40, 40, -40)

[sub_resource type="TileSet" id="TileSet_b7bo0"]
tile_size = Vector2i(80, 80)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 8
sources/2 = SubResource("TileSetAtlasSource_ndhd3")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b52qh"]
texture = ExtResource("5_4cmto")
texture_region_size = Vector2i(80, 80)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40, -40, 40, -40, 40, 40, -40, 40)

[sub_resource type="TileSet" id="TileSet_iqd3r"]
tile_size = Vector2i(80, 80)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 16
sources/0 = SubResource("TileSetAtlasSource_b52qh")

[node name="Main" type="Node"]
script = ExtResource("1_u8reb")
mob_scene = ExtResource("2_p1emh")
battery_scene = ExtResource("3_eq8ru")
wave_puzzle_spawner_scene = ExtResource("5_vpf7m")
sign_scene = ExtResource("5_4flbu")

[node name="Player" parent="." instance=ExtResource("1_20vq2")]
position = Vector2(786, 512)

[node name="globalTickTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="mobTimer" type="Timer" parent="."]

[node name="audienceTimer" type="Timer" parent="."]

[node name="batterySpawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="sineSpawnTimer" type="Timer" parent="."]
wait_time = 9.0

[node name="playerStart" type="Marker2D" parent="."]
position = Vector2(786, 480)

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(146, 0)
curve = SubResource("Curve2D_wdt4c")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(240, 0)
rotation = 0.00999967

[node name="HUD" parent="." instance=ExtResource("4_v6k7g")]

[node name="Layers" type="Node" parent="."]

[node name="spikes" type="TileMapLayer" parent="Layers"]
texture_filter = 1
tile_map_data = PackedByteArray("AAALAAAAAQAHAAIAAAAKAAAAAQAHAAIAAAAJAAAAAQAHAAIAAAAIAAAAAQAHAAIAAAAHAAAAAQAHAAIAAAAGAAAAAQAHAAIAAAAFAAAAAQAGAAEAAAAFAAsAAQAHAAEAAAAGAAsAAQAHAAIAAAAHAAsAAQAHAAIAAAAIAAsAAQAHAAIAAAAJAAsAAQAHAAIAAAAKAAsAAQAHAAIAAAALAAsAAQAHAAIAAAAMAAAAAQAHAAIAAAAMAAsAAQAHAAIAAAAFAAEAAQAIAAIAAAAFAAIAAQAIAAIAAAAFAAMAAQAIAAIAAAAFAAQAAQAIAAIAAAAFAAUAAQAIAAIAAAAFAAYAAQAIAAIAAAAFAAcAAQAIAAIAAAAFAAgAAQAIAAIAAAAFAAkAAQAIAAIAAAAFAAoAAQAIAAIAAAAOAAEAAQAIAAIAAAAOAAIAAQAIAAIAAAAOAAMAAQAIAAIAAAAOAAQAAQAIAAIAAAAOAAUAAQAIAAIAAAAOAAYAAQAIAAIAAAAOAAcAAQAIAAIAAAAOAAgAAQAIAAIAAAAOAAkAAQAIAAIAAAAOAAoAAQAIAAIAAAANAAsAAQAHAAIAAAANAAAAAQAHAAIAAAAOAAAAAQAFAAEAAAAOAAsAAQAEAAEAAAA=")
tile_set = SubResource("TileSet_85w72")

[node name="charge" type="TileMapLayer" parent="Layers"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAIAAkAAAABAAAAAAA=")
tile_set = SubResource("TileSet_rmodm")
script = ExtResource("7_fv7ns")

[node name="chargeTimer" type="Timer" parent="Layers/charge"]
wait_time = 5.0
one_shot = true

[node name="batteryChargeBar" type="ProgressBar" parent="Layers/charge"]
offset_left = 640.0
offset_top = 808.0
offset_right = 720.0
offset_bottom = 835.0

[node name="charged" type="TileMapLayer" parent="Layers"]
texture_filter = 1
tile_set = SubResource("TileSet_b7bo0")
script = ExtResource("8_qbj57")

[node name="plug" type="TileMapLayer" parent="Layers"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAHAAIAAAAEAAAAAAA=")
tile_set = SubResource("TileSet_iqd3r")

[node name="playerHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_uvtts")
volume_db = 24.0

[node name="fuelInvalid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_6ipa8")
volume_db = 24.0

[node name="fuelValid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_mugss")
volume_db = 24.0

[node name="signCharge" parent="." instance=ExtResource("5_4flbu")]
position = Vector2(680, 680)
frame_progress = 0.616627

[node name="signPlug" parent="." instance=ExtResource("5_4flbu")]
position = Vector2(600, 120)
frame_progress = 0.620633

[connection signal="getBattery" from="Player" to="." method="_on_player_get_battery"]
[connection signal="giveBattery" from="Player" to="." method="_on_player_charge_battery"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="plugBattery" from="Player" to="." method="_on_player_plug_battery"]
[connection signal="timeout" from="globalTickTimer" to="." method="_on_global_tick_timer_timeout"]
[connection signal="timeout" from="globalTickTimer" to="Layers/charge" method="_on_global_tick_timer_timeout"]
[connection signal="timeout" from="mobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="audienceTimer" to="." method="_on_audience_timer_timeout"]
[connection signal="timeout" from="batterySpawnTimer" to="." method="_on_battery_spawn_timer_timeout"]
[connection signal="timeout" from="sineSpawnTimer" to="." method="_on_sine_spawn_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="start_tuto" from="HUD" to="." method="start_tuto"]
[connection signal="chargedBattery" from="Layers/charge" to="." method="_on_charge_charged_battery"]
[connection signal="chargedBattery" from="Layers/charge" to="Layers/charged" method="_on_charge_charged_battery"]
[connection signal="takeBattery" from="Layers/charge" to="." method="_on_charge_take_battery"]
[connection signal="takeBattery" from="Layers/charge" to="Player" method="_on_charge_take_battery"]
[connection signal="freeChargeSlot" from="Layers/charged" to="." method="_on_charged_free_charge_slot"]
[connection signal="freeChargeSlot" from="Layers/charged" to="Layers/charge" method="_on_charged_free_charge_slot"]
